--- a/helm/templates/hpa.yaml
+++ b/helm/templates/hpa.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.enableS2I }}
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "helm.fullname" . }}
