--- a/helm/templates/hpa.yaml
+++ b/helm/templates/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.enableS2I }}
+{{- if eq .Values.enableS2I "true" }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
